--- a/resources/style.css
+++ b/resources/style.css
@@ -1,8 +1,4 @@
- @font-face {
-    font-family: Segoe; 
-    src: url(img/9404.ttf);
-    font-weight: 300;
-   }
+
 ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
   color: grey;
   opacity: 1; /* Firefox */
@@ -16,6 +12,27 @@ body {
     background-color: black;
     font-size: 65%;
    }
+.commentdiv{
+    position: absolute;
+    width: 80%;
+    height: 50%;
+    background-size: 100% 100%;
+    top: 30%;
+    left: 50%;
+    margin: auto;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    visibility: hidden;
+}
+.comments{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: lighter;
+    font-size: 3em;
+    color: white;
+    text-align: center;
+}
 .centerblock {
     position: absolute;
     width: 50%;
@@ -34,7 +51,7 @@ body {
 }
 .centerblockindiv {
     position: absolute;
-    width: 40%;
+    width: 42%;
     height: 50%;
     background-size: 100% 100%;
     top: 50%;
@@ -47,7 +64,6 @@ body {
 }
 .centerblockindiv2 {
     width: 100%;
-    height: 100%;
     
 }
 .logo{
@@ -95,7 +111,7 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 1.5em;
     font-weight: 500;
-    color: grey;
+    color: white;
     margin-left: 10px;
     margin-bottom: 6px;
 }
