--- a/resources/stylecssdueler.css
+++ b/resources/stylecssdueler.css
@@ -15,10 +15,193 @@ body {
     width: auto !important;
     min-height: 500px;
    }
+#buttoncontact{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+#buttonproduct{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+#divbutton1{
+    position: absolute;
+    top: 3%;
+    left: 3%;
+    width: 25%;
+    height:97%;
+    min-width: 184px;
+}
+#divbutton4{
+    position: absolute;
+    top: 23%;
+    left: 3%;
+    width: 25%;
+    height:10%;
+    min-width: 184px;
+}
+#divbutton5{
+    position: absolute;
+    top: 33%;
+    left: 3%;
+    width: 25%;
+    height:10%;
+    min-width: 184px;
+}
+#divbutton6{
+    position: absolute;
+    top: 43%;
+    left: 3%;
+    width: 25%;
+    height:10%;
+    min-width: 184px;
+}
+#divbutton3{
+    position: absolute;
+    top: 13%;
+    left: 3%;
+    width: 25%;
+    height:30%;
+    min-width: 184px;
+}
+#divbutton2{
+    position: relative;
+    width: 140px;
+    height: 40px;
+    cursor: pointer; 
+}
+.centered {
+  position: absolute;
+  left: 8%;
+  top:-30%;
+}
+.texted{
+    position: absolute;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    user-select: none;      
+    color: white;
+}
+.underline{
+    /* background: url(img/centerblockbackground.png) no-repeat; */
+    height: 2px;
+    width:100%;
+    background-color: grey;
+
+}
+.logo{
+    position: absolute;
+    background: url(img/logo.png) no-repeat;
+    background-size: 100%;
+    width: 40px;
+    height: 90%;
+    top: 4%;
+    left: 45%;
+    margin: auto;
+}
+.marginclass{
+    width:100%;
+    height: 2%;
+}
+#contactform{
+    width: 100%;
+    height: 100%;
+}
+.textedwhite{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    color: white;
+}
+.textedgray{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 13px;
+    color: gray;
+}
+.textedgraybigger{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 15px;
+    color: gray;
+}
+.greytextrightalign{
+   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 2em;
+    color: white; 
+    text-align: center;
+    /* -webkit-text-stroke: 1px rgb(70,70,70); */
+   
+}
+#contactinformation{
+    width: 100%;
+    height: 100%;
+    visibility: hidden;
+}
+#video1{
+    position: absolute;
+    top:30%;
+    right: 6%;
+    height: 30%;
+    width: 40%;
+}
+#contactinformation2{
+    visibility: hidden;
+}
+.icons{
+    border: 0;
+    width: 10px;
+    margin-left: 4px;
+}
+.iconsbig{
+    border: 0;
+    width: 30px;
+    margin-left: 4px;
+}
+.iconsbig2{
+    border: 0;
+    width: 140px;
+}
+.marginpx{
+    margin-left: 2px;
+}
 .comingsoon{
     position: absolute;
-    width: 30%;
+    width: 50%;
     bottom: 10%;
-    left: 35%;
+    left: 25%;
     margin: auto;
+}
+#textbuttonproduct{
+    margin-left: 7%;
+}
+#textbuttonforum{
+    margin-left: 17%;
+}
+#textbuttonregister{
+    margin-left: 10%;
+}
+#textbuttonhowitworks{
+    margin-left: -5%;
+}
+#logoname{
+    position: absolute;
+    width: 40%;
+    height: 50%;
+    top: 10%;
+    left: 52%;
+    margin: auto;
+    text-align: right;
+}
+#logonamepic{
+    border: 0px;
+    left:15%;
+    width: 65%;
+    margin: auto;
+}
+.opacitychange{
+    opacity: 0.8;
+}
+.opacitychange:hover{
+     opacity: 1;
 }
