--- a/resources/style.css
+++ b/resources/style.css
@@ -4,7 +4,7 @@
   opacity: 1; /* Firefox */
 }
 body {
-    background: url(img/background.png) no-repeat;
+    background: url(imgdueler/background.png) no-repeat;
     -moz-background-size: 100%; /* Firefox 3.6+ */
     -webkit-background-size: 100%; /* Safari 3.1+ и Chrome 4.0+ */
     -o-background-size: 100%; /* Opera 9.6+ */
