--- a/resources/stylecssdueler.css
+++ b/resources/stylecssdueler.css
@@ -4,7 +4,7 @@
 }
 body {
     position: relative;
-    background: url(imgindex/background.png) no-repeat;
+    background: url(imgdueler/background.png) no-repeat;
     -moz-background-size: 100%; /* Firefox 3.6+ */
     -webkit-background-size: 100%; /* Safari 3.1+ и Chrome 4.0+ */
     -o-background-size: 100%; /* Opera 9.6+ */
@@ -169,7 +169,7 @@ body {
     position: absolute;
     width: 50%;
     bottom: 10%;
-    left: 25%;
+    left: 50%;
     margin: auto;
 }
 #textbuttonproduct{
