--- a/resources/styleindex.css
+++ b/resources/styleindex.css
@@ -28,23 +28,21 @@ body {
 #divbutton1{
     position: absolute;
     top: 3%;
-    left: 3%;
-    width: 25%;
-    height:100%;
-    min-width: 184px;
+    left: 50px;
+    width: 246px;
+    height:90%;
 }
 #divbutton3{
     position: absolute;
-    top: 70%;
-    left: 3%;
-    width: 25%;
-    height:30%;
-    min-width: 184px;
+    top: 3%;
+    left: 178px;
+    width: 118px;
+    height:90%;
 }
 #divbutton2{
     position: relative;
-    width: 140px;
-    height: 40px;
+    width: 118px;
+    height: 35px;
     cursor: pointer; 
 }
 .centered {
@@ -55,7 +53,7 @@ body {
 .texted{
     position: absolute;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 20px;
+    font-size: 18px;
     -moz-user-select: none;
     -khtml-user-select: none;
     user-select: none;      
@@ -68,15 +66,20 @@ body {
     background-color: grey;
 
 }
-.logo{
+.logo1{
     position: absolute;
+    width: 100%;
+    height: 90%;
+    top: 4%;
+}
+.logo2{
     background: url(img/logo.png) no-repeat;
     background-size: 100%;
     width: 40px;
-    height: 90%;
-    top: 4%;
-    left: 45%;
-    margin: auto;
+    height: 300px;
+    margin-left: auto;
+    margin-right: auto;
+    
 }
 .marginclass{
     width:100%;
@@ -115,6 +118,8 @@ body {
 }
 #contactinformation2{
     visibility: hidden;
+    text-align: center;
+    margin-left: -128px;
 }
 .icons{
     border: 0;
@@ -123,22 +128,24 @@ body {
 }
 .iconsbig{
     border: 0;
-    width: 30px;
-    margin-left: 4px;
+    height: 25px;
 }
 .iconsbig2{
     border: 0;
-    width: 140px;
+    height: 32px;
+}
+.iconsbig3{
+    border: 0;
+    height: 18px;
 }
 .marginpx{
     margin-left: 2px;
 }
 .comingsoon{
     position: absolute;
-    width: 30%;
+    width: 20%;
     bottom: 10%;
-    left: 35%;
-    margin: auto;
+    left: 40%;
 }
 #textbuttonproduct{
     margin-left: 7%;
@@ -148,14 +155,14 @@ body {
     width: 50%;
     height: 50%;
     top: 30%;
-    left: 44%;
+    right: 50px;
     margin: auto;
     text-align: right;
 }
 #logonamepic{
     border: 0px;
     left:15%;
-    width: 85%;
+    width: 75%;
     margin: auto;
 }
 .opacitychange{
