--- a/resources/style.css
+++ b/resources/style.css
@@ -11,6 +11,9 @@ body {
     background-size: auto 100%; /* Современные браузеры */
     background-color: black;
     font-size: 65%;
+    min-width: 985px;
+    width: auto !important;
+    min-height: 500px;
    }
 .commentdiv{
     position: absolute;
