--- a/resources/stylecssdueler.css
+++ b/resources/stylecssdueler.css
@@ -11,9 +11,9 @@ body {
     background-size: auto 100%; /* Современные браузеры */
     background-color: black;
     font-size: 65%;
-    min-width: 530px;
+    min-width: 985px;
     width: auto !important;
-    min-height: 500px;
+    min-height: 600px;
    }
 #buttoncontact{
     position: absolute;
@@ -25,50 +25,54 @@ body {
     width: 100%;
     height: 100%;
 }
-#divbutton1{
-    position: absolute;
-    top: 3%;
-    left: 3%;
-    width: 25%;
-    height:97%;
-    min-width: 184px;
-}
+
 #divbutton4{
+    
     position: absolute;
-    top: 23%;
-    left: 3%;
-    width: 25%;
-    height:10%;
-    min-width: 184px;
+    top: 6%;
+    right: 50px;
+    width: 118px;
+    height: 35px;
 }
 #divbutton5{
+    
     position: absolute;
-    top: 33%;
-    left: 3%;
-    width: 25%;
-    height:10%;
-    min-width: 184px;
+    top: 6%;
+    right: 178px;
+    width: 118px;
+    height: 35px;
 }
 #divbutton6{
     position: absolute;
-    top: 43%;
-    left: 3%;
-    width: 25%;
-    height:10%;
-    min-width: 184px;
+    top: 6%;
+    right: 306px;
+    width: 118px;
+    height: 35px;
+}
+#divbutton1{
+    position: absolute;
+    top: 6%;
+    left: 50px;
+    width: 246px;
+    height:90%;
 }
 #divbutton3{
     position: absolute;
-    top: 13%;
-    left: 3%;
-    width: 25%;
-    height:30%;
-    min-width: 184px;
+    top: 6%;
+    left: 178px;
+    width: 118px;
+    height:90%;
 }
 #divbutton2{
     position: relative;
-    width: 140px;
-    height: 40px;
+    width: 118px;
+    height: 35px;
+    cursor: pointer; 
+}
+#divbutton2100{
+    position: relative;
+    width: 100%;
+    height: 35px;
     cursor: pointer; 
 }
 .centered {
@@ -79,7 +83,7 @@ body {
 .texted{
     position: absolute;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 20px;
+    font-size: 18px;
     -moz-user-select: none;
     -khtml-user-select: none;
     user-select: none;      
@@ -167,36 +171,42 @@ body {
 }
 .comingsoon{
     position: absolute;
-    width: 50%;
-    bottom: 10%;
-    left: 50%;
+    width: 300px;
+    bottom: 0px;
+    left: 60%;
+    height: 25%;
     margin: auto;
 }
 #textbuttonproduct{
-    margin-left: 7%;
+    margin-left: 4%;
 }
 #textbuttonforum{
     margin-left: 17%;
 }
 #textbuttonregister{
-    margin-left: 10%;
+    margin-left: 8%;
 }
 #textbuttonhowitworks{
     margin-left: -5%;
+}
+#textbuttoncontact{
+    margin-left: -3%;
 }
 #logoname{
     position: absolute;
     width: 40%;
     height: 50%;
-    top: 10%;
-    left: 52%;
+    top: 20%;
+    right: 50px;
     margin: auto;
     text-align: right;
 }
 #logonamepic{
+    position: absolute;
     border: 0px;
-    left:15%;
-    width: 65%;
+    top:6%;
+    width: 20%;
+    left:35%;
     margin: auto;
 }
 .opacitychange{
@@ -204,4 +214,36 @@ body {
 }
 .opacitychange:hover{
      opacity: 1;
+}
+#leftborderprize{
+  position: absolute;
+  width: 20%;
+  height: 30px;
+  left: 0%;
+  top:50%;
+  transform: rotate(-15deg)
+}
+#rightborderprize{
+  position: absolute;
+  width: 20%;
+  height: 30px;
+  right: 0%;
+  top:50%;
+  transform: rotate(15deg)
+}
+
+#centerborderprize{
+  position: absolute;
+  width: 50%;
+  height: 60px;
+  left: 25%;
+}
+#centerimgprize{
+  width: 100%;
+}
+#leftimgprize{
+  width: 100%;
+}
+#rightimgprize{
+  width: 100%;
 }
