--- a/resources/styleindex.css
+++ b/resources/styleindex.css
@@ -148,7 +148,10 @@ body {
     left: 40%;
 }
 #textbuttonproduct{
-    margin-left: 7%;
+    margin-left: 4%;
+}
+#textbuttoncontact{
+    margin-left: -3%;
 }
 #logoname{
     position: absolute;
