--- a/resources/style.css
+++ b/resources/style.css
@@ -131,3 +131,47 @@ input:focus {
     background-color: grey;
 
 }
+.centered {
+  position: absolute;
+  left: 8%;
+  top:-30%;
+}
+.texted{
+    position: absolute;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 18px;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    user-select: none;      
+    color: white;
+}
+#textbuttonregister{
+    margin-left: 2%;
+}
+#buttoncontact{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+#divbutton2100{
+    position: relative;
+    width: 100%;
+    height: 35px;
+    cursor: pointer; 
+}
+#divbutton4{
+    
+    position: absolute;
+    top: 6%;
+    right: 50px;
+    width: 118px;
+    height: 35px;
+}
+#divbuttonback{
+    
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 24px;
+    height: 26px;
+}
