--- a/resources/stylecssdueler.css
+++ b/resources/stylecssdueler.css
@@ -81,7 +81,6 @@ body {
   top:-30%;
 }
 .texted{
-    position: absolute;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 18px;
     -moz-user-select: none;
@@ -177,10 +176,11 @@ body {
 }
 .comingsoon{
     position: absolute;
-    width: 300px;
-    bottom: 0px;
-    left: 60%;
-    height: 25%;
+    width: 500px;
+    top: 500px;
+    left: 50%;
+    height: 150px;
+    transform: translate(-50%,0%);
     margin: auto;
 }
 #textbuttonproduct{
@@ -198,14 +198,14 @@ body {
 #textbuttoncontact{
     margin-left: -3%;
 }
-#logoname{
+#liderboarddiv{
     position: absolute;
-    width: 40%;
-    height: 50%;
-    top: 20%;
+    width: 530px;
+    height: 350px;
+    top: 120px;
     right: 50px;
     margin: auto;
-    text-align: right;
+    text-align: left;
 }
 #logonamepic{
     position: absolute;
