--- a/resources/stylecssdueler.css
+++ b/resources/stylecssdueler.css
@@ -177,9 +177,9 @@ body {
 .comingsoon{
     position: absolute;
     width: 500px;
-    top: 500px;
+    bottom: 20px;
     left: 50%;
-    height: 150px;
+    height: 50px;
     transform: translate(-50%,0%);
     margin: auto;
 }
@@ -252,4 +252,10 @@ body {
 }
 #rightimgprize{
   width: 100%;
+}
+.blockPlayear{
+    position: relative;
+    width: 300px;
+    height: 34px;
+    display: inline-block;
 }
