--- a/resources/stylecssdueler.css
+++ b/resources/stylecssdueler.css
@@ -253,7 +253,7 @@ body {
 #rightimgprize{
   width: 100%;
 }
-.blockPlayear{
+.blockPlayer{
     position: relative;
     width: 300px;
     height: 34px;
