--- a/resources/stylecssdueler.css
+++ b/resources/stylecssdueler.css
@@ -13,7 +13,7 @@ body {
     font-size: 65%;
     min-width: 985px;
     width: auto !important;
-    min-height: 600px;
+    min-height: 630px;
    }
 #buttoncontact{
     position: absolute;
@@ -256,6 +256,7 @@ body {
 .blockPlayer{
     position: relative;
     width: 300px;
-    height: 34px;
+    height: 30px;
     display: inline-block;
+    top: -8px;
 }
