--- a/resources/styleindex.css
+++ b/resources/styleindex.css
@@ -19,6 +19,7 @@ body {
     position: absolute;
     width: 100%;
     height: 100%;
+    z-index: 5;
 }
 #buttonproduct{
     position: absolute;
@@ -27,14 +28,14 @@ body {
 }
 #divbutton1{
     position: absolute;
-    top: 3%;
+    top: 30px;
     left: 50px;
     width: 246px;
     height:90%;
 }
 #divbutton3{
     position: absolute;
-    top: 3%;
+    top: 30px;
     left: 178px;
     width: 118px;
     height:90%;
@@ -46,17 +47,20 @@ body {
     cursor: pointer; 
 }
 .centered {
-  position: absolute;
-  left: 8%;
-  top:-30%;
+    
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    white-space: nowrap; 
 }
 .texted{
-    position: absolute;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 18px;
     -moz-user-select: none;
     -khtml-user-select: none;
-    user-select: none;      
+    user-select: none;  
+    z-index: 10;    
     color: white;
 }
 .underline{
@@ -70,7 +74,7 @@ body {
     position: absolute;
     width: 100%;
     height: 90%;
-    top: 4%;
+    top: 50px;
 }
 .logo2{
     background: url(img/logo.png) no-repeat;
@@ -146,12 +150,6 @@ body {
     width: 20%;
     bottom: 10%;
     left: 40%;
-}
-#textbuttonproduct{
-    margin-left: 4%;
-}
-#textbuttoncontact{
-    margin-left: -3%;
 }
 #logoname{
     position: absolute;
