--- a/resources/stylecssdueler.css
+++ b/resources/stylecssdueler.css
@@ -84,7 +84,7 @@ body {
 }
 .texted{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 18px;
+    font-size: 14px;
     -moz-user-select: none;
     -khtml-user-select: none;
     user-select: none;      
@@ -178,17 +178,36 @@ body {
 }
 .comingsoon{
     position: absolute;
-    width: 500px;
+    width: 700px;
     bottom: 20px;
     left: 50%;
     height: 50px;
     transform: translate(-50%,0%);
     margin: auto;
 }
+::-webkit-scrollbar {
+width: 12px;
+height: 12px;
+}
 
+::-webkit-scrollbar-track {
+box-shadow: inset 0 0 10px darkgray;
+border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+border-radius: 10px;
+background: grey; 
+box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
+
+::-webkit-scrollbar-thumb:hover {
+background: darkgray;
+}
 #liderboarddiv{
+    overflow-y: scroll;
     position: absolute;
-    width: 530px;
+    width: 395px;
     height: 350px;
     top: 120px;
     right: 50px;
@@ -247,4 +266,5 @@ body {
     height: 30px;
     display: inline-block;
     top: -8px;
+    margin-left: 20px;
 }
